--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "switchchat",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Chatbox Module for SwitchCraft Server",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,6 @@
   "bugs": {
     "url": "https://github.com/Ale32bit/SwitchChat/issues"
   },
-  "homepage": "https://github.com/Ale32bit/SwitchChat#readme"
+  "homepage": "https://github.com/Ale32bit/SwitchChat#readme",
+  "devDependencies": {}
 }
