--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "switchchat",
-  "version": "2.0.6",
-  "description": "SwitchCraft ChatBox framework for Node.js",
-  "main": "index.js",
+  "version": "3.0.0",
+  "description": "Framework for the SwitchCraft Chatbox v2",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "node test.js"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Alessandro \"AlexDevs\"",
-  "license": "MIT",
-  "dependencies": {
-    "ws": "^7.3.1"
-  },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ale32bit/SwitchChat.git"
   },
+  "keywords": [
+    "switchchat",
+    "websocket"
+  ],
+  "author": "Alessandro \"AlexDevs\" Proto",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ale32bit/SwitchChat/issues"
   },
-  "homepage": "https://github.com/Ale32bit/SwitchChat#readme"
+  "homepage": "https://github.com/Ale32bit/SwitchChat#readme",
+  "dependencies": {
+    "@types/ws": "^8.5.4",
+    "ws": "^8.12.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
+  }
 }
